packages/grammar/test/corpus/core.txt
==================
Core WAVEx syntax
==================

type Task = Doc<"tasks">

~~~
+head
  title Tasks

$$tasks:list
main [stack gap-xl]
  p Hello {{ user.name }}.
  = label(task)

---

(source_file
  (prelude
    (newline)
    (prelude_content)
    (newline)
    (newline))
  (separator
    (wave_marker))
  (newline)
  (template
    (terminated_template_line
      (template_line
        (directive_line
          (directive_marker)
          name: (directive_name
            (identifier))))
      (newline))
    (terminated_template_line
      (template_line
        (element_line
          tag: (tag_name)
          (line_item
            (text_fragment))))
      (newline))
    (blank_line
      (newline))
    (terminated_template_line
      (template_line
        (resource_declaration
          (convex_call
            (convex_call_sigil)
            (convex_address
              (convex_address_segment)
              (convex_address_separator)
              (convex_address_segment)))))
      (newline))
    (terminated_template_line
      (template_line
        (element_line
          tag: (tag_name)
          (line_item
            (utility_group
              (utility_group_open)
              (utility_name)
              (utility_name)
              (utility_group_close)))))
      (newline))
    (terminated_template_line
      (template_line
        (element_line
          tag: (tag_name)
          (line_item
            (text_fragment))
          (line_item
            (interpolation
              (interpolation_open)
              expression: (interpolation_expression_content)
              (interpolation_close)))
          (line_item
            (text_fragment))))
      (newline))
    (terminated_template_line
      (template_line
        (expression_line
          (expression_marker)
          expression: (line_expression_content)))
      (newline))))
